--- a/layouts/partials/widgets/teaching.html
+++ b/layouts/partials/widgets/teaching.html
@@ -24,9 +24,9 @@
               {{- with .company_url}}<a href="{{.}}" target="_blank" rel="noopener">{{end}}{{.company | markdownify | emojify}}{{with .company_url}}</a>{{end -}}
             </h4>
             <div class="text-muted exp-meta">
-              {{ (time .date_start).Format ($page.Params.date_format | default "January 2006") }} –
+              {{ (time .date_start).Format ($page.Params.date_format | default "") }} –
               {{ if .date_end}}
-                {{ (time .date_end).Format ($page.Params.date_format | default "January 2006") }}
+                {{ (time .date_end).Format ($page.Params.date_format | default "") }}
               {{else}}
                 {{ i18n "present" | default "Present" }}
               {{end}}
